--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 <body>
   <!-- Шапка -->
     <header class="header">
-     <nav class="navigation-list">
-      <a href="./index.html" class="main-logo link" >Web
-        <span class="main-logo-studio link">Studio</span></a>
-        <ul class="header-list list">
-      <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
-      <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-      <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
-     </ul>
-     </nav>
-     <address class="adress">
-    <ul class="info list" >
-    <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
-    <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
-</ul>
-</address>
+    <div class="container-header">
+       <nav class="navigation-list">
+        <a href="./index.html" class="main-logo link" >Web
+          <span class="main-logo-studio link">Studio</span></a>
+          <ul class="header-list list">
+        <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
+        <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+        <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
+       </ul>
+       </nav>
+       <address class="adress">
+      <ul class="info list" >
+      <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
+      <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
+  </ul>
+  </address>
+    </div >
   </header>
 <!-- Головний контент,секція1 -->
     <main> 
