--- a/index.html
+++ b/index.html
@@ -13,95 +13,113 @@
 </head>
 <body>
   <!-- Шапка -->
-    <header class="header">
-    <div class="container-header">
-       <nav class="navigation-list">
-        <a href="./index.html" class="main-logo link" >Web
-          <span class="main-logo-studio link">Studio</span></a>
-          <ul class="header-list list">
-        <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
-        <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-        <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
-       </ul>
-       </nav>
-       <address class="adress">
-      <ul class="info list" >
-      <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
-      <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
-  </ul>
-  </address>
-    </div >
-  </header>
-<!-- Головний контент,секція1 -->
-    <main> 
-      <section class="descrition">
-      <h1 class="descrition-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="description-btn">Order Service</button>
-    </section>
-    
-<!--Список стратегій,секція 2 -->
-    <section class="strategy-list">
-      <h2 hidden="" class="strategy-main-title">Strategy</h2>
-      <ul class="strategy-list-content list">
-        <li class="strategy-item">
-            <h3 class="strategy-title">Strategy</h3>
-            <p class="strategy-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-        </li>
-        <li class="strategy-item">
-          <h3 class="strategy-title">Punctuality</h3>
-          <p class="strategy-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        </li>
-        <li class="strategy-item">
-            <h3 class="strategy-title">Diligence</h3>
-                <p class="strategy-text ">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        </li>
-        <li class="strategy-item">
-            <h3 class="strategy-title">Technologies</h3>
-                <p class="strategy-text ">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-        </li>
-      </ul>
-    </section>
-    <!-- Чим ми займаємось -->
-    <section class="perfomance">
-      <h2 class="perfomance-title">What Are We Doing</h2>
-      <ul class="perfomance-list list">
-        <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
-        <li class="perfomance-item"><img src="./images/apps.jpg" alt="applications" width="360"></li>
-        <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
+ <div class="container">
+      <header class="header">
+      <div class="container-header">
+         <nav class="navigation-list">
+          <a href="./index.html" class="main-logo link" >Web
+            <span class="main-logo-studio link">Studio</span></a>
+            <ul class="header-list list">
+          <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
+          <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+          <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
+         </ul>
+         </nav>
+         <address class="adress">
+        <ul class="info list" >
+        <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
+        <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
     </ul>
-    </section>
-    <!-- Наша команда  -->
-    <section class="team">
-      <h2 class="perfomance-title">Our Team</h2>
-      <ul class="team-members list">
-        <li class="team-members-item">
-          <img src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264">
-          <h3 class="team-members-item-title">Mark Guerrero</h3>
-          <p class="strategy-text">Product Designer</p>
-        </li>
-        <li class="team-members-item">
-          <img src="./images/tom.jpg" alt="pic of Tom Ford" width="264">
-          <h3 class="team-members-item-title">Tom Ford</h3>
-          <p class="strategy-text">Frontend Developer</p>
-        </li>
-        <li class="team-members-item" >
-          <img src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
-          <h3 class="team-members-item-title">Camila Garcia</h3>
-          <p class="strategy-text">Marketing</p>
-        </li>
-        <li class="team-members-item">
-          <img src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
-          <h3 class="team-members-item-title">Daniel Wilson</h3>
-          <p class="strategy-text">UI Designer</p>
-        </li>
+    </address>
+      </div >
+    </header>
+  <!-- Головний контент,секція1 -->
+      <main> 
+        <section class="descrition">
+        <h1 class="descrition-title">Effective Solutions 
+          <span>for Your Business</h1></span>
+        <button type="button" class="description-btn">Order Service</button>
+      </section>
+      
+  <!--Список стратегій,секція 2 -->
+      <div class="container-strategy">
+        <section class="strategy-list">
+          <h2 hidden="" class="strategy-main-title">Strategy</h2>
+          <ul class="strategy-list-content list">
+            <li class="strategy-item">
+                <h3 class="strategy-title">Strategy</h3>
+                <p class="strategy-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li class="strategy-item">
+              <h3 class="strategy-title">Punctuality</h3>
+              <p class="strategy-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li class="strategy-item">
+                <h3 class="strategy-title">Diligence</h3>
+                    <p class="strategy-text ">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li class="strategy-item">
+                <h3 class="strategy-title">Technologies</h3>
+                    <p class="strategy-text ">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+      </di >
+      </section>
+      <!-- Чим ми займаємось -->
+      <section class="perfomance">
+        <h2 class="perfomance-title">What Are We Doing</h2>
+        <ul class="perfomance-list list">
+          <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
+          <li class="perfomance-item"><img src="./images/apps.jpg" alt="applications" width="360"></li>
+          <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
       </ul>
-    </section>
-</main>
-<!-- Footer -->
-<footer class="footer"> 
-  <a href="./index.html" class="main-logo link" >Web
-    <span class="main-logo-studio-footer link">Studio</span></a>
-    <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
+      </section>
+      <!-- Наша команда  -->
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-members list">
+          <li class="team-members-item">
+            <img src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264">
+            <div class="team-members-description">
+              <h3 class="team-members-item-title">Mark Guerrero</h3>
+              <p class="strategy-text team-members-item-text">Product Designer</p>
+            </div >
+          </li>
+          <li class="team-members-item">
+            <img src="./images/tom.jpg" alt="pic of Tom Ford" width="264">
+           <div class="team-members-description">
+              <h3 class="team-members-item-title">Tom Ford</h3>
+              <p class="strategy-text team-members-item-text ">Frontend Developer</p>
+           </div >
+          </li>
+          <li class="team-members-item" >
+            <img src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
+            <div class="team-members-description">
+              <h3 class="team-members-item-title">Camila Garcia</h3>
+              <p class="strategy-text team-members-item-text ">Marketing</p>
+            </div >
+          </li>
+          <li class="team-members-item">
+            <img src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
+            <div class="team-members-description">
+              <h3 class="team-members-item-title">Daniel Wilson</h3>
+              <p class="strategy-text team-members-item-text">UI Designer</p>
+            </div >
+          </li>
+        </ul>
+      </section>
+  </main>
+  <!-- Footer -->
+  <footer class="footer"> 
+    <a href="./index.html" class="main-logo link" >Web
+      <span class="main-logo-studio-footer link">Studio</span></a>
+      <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </footer>
+ </div>
 </body>
 </html>
+
+
+
+
+
