--- a/portfolio.html
+++ b/portfolio.html
@@ -13,107 +13,129 @@
 </head>
 <body>
   <!-- Шапка -->
-  <header class="header">
-    <nav class="navigation-list">
-     <a href="./index.html" class="main-logo link" >Web
-       <span class="main-logo-studio link">Studio</span></a>
-       <ul class="header-list list">
-     <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
-     <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-     <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
+ <div class="container">
+      <header class="header">
+        <nav class="navigation-list">
+         <a href="./index.html" class="main-logo link" >Web
+           <span class="main-logo-studio link">Studio</span></a>
+           <ul class="header-list list">
+         <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
+         <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+         <li class="navigation"><a class="header-link link" href="">Contacts</a></li>
+        </ul>
+        </nav>
+        <address class="adress">
+       <ul class="info list" >
+       <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
+       <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
     </ul>
-    </nav>
-    <address class="adress">
-   <ul class="info list" >
-   <li class="mail .contacts"><a href="mailto:info@devstudio.com" class="mail-link link">info@devstudio.com</a></li>
-   <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
-</ul>
-</address>
- </header>
-<!-- Головний контент,секція1,наші переваги -->
-    <main> 
-      <section class="advantages">
-      <h1 hidden="" class="advantages-title">Our advantages</h1>
-      <ul class="advantages-list list">
-<li><button type="button" class="btn">All</button></li>
-<li><button type="button" class="btn">Web Site</button></li>
-<li><button type="button" class="btn">App</button></li>
-<li><button type="button" class="btn">Design</button></li>
-<li><button type="button" class="btn">Marketing</button></li>
-      </ul> 
-<!-- <!-List, inside of section --> 
-      <ul class="possibilities-list list">
-        <li class="possibilities-item link" >
-             <a href="" class="possibilities-item-link link">
-            <img src="./images/bankapp.jpg" alt="bank application" width="360">
-            <h2 class="possibilities-item-name">Banking App Interface Concept</h2>
-            <p class="possibilities-item-text">App</p>
-        </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/contactless.jpg" alt="contactless payment" width="360">
-            <h2 class="possibilities-item-name">Cashless Payment</h2>
-                <p class="possibilities-item-text">Marketing</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/maditationapp.jpg" alt="meditation app" width="360">
-            <h2 class="possibilities-item-name">Meditation App</h2>
-                <p class="possibilities-item-text">App</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/taxiservice.jpg" alt="taxi service" width="360">
-            <h2 class="possibilities-item-name">Taxi Service</h2>
-                <p class="possibilities-item-text">Marketing</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/screenil.jpg" alt="screen illustratuin" width="360">
-            <h2 class="possibilities-item-name">Screen Illustrations</h2>
-                <p class="possibilities-item-text">Design</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/onlinecoures.jpg" alt="online education" width="360">
-            <h2 class="possibilities-item-name">Online Courses</h2>
-                <p class="possibilities-item-text">Marketing</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/igstories.jpg" alt="instagram stories" width="360">
-            <h2 class="possibilities-item-name">Instagram Stories Concept</h2>
-                <p class="possibilities-item-text">Design</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/organicfood.jpg" alt="organic food" width="360">
-            <h2 class="possibilities-item-name">Organic Food</h2>
-                <p class="possibilities-item-text">Web Site</p>
-            </a>
-        </li>
-        <li class="possibilities-item link">
-            <a href="" class="possibilities-item-link link">
-            <img src="./images/coffee.jpg" alt="coffee" width="360">
-            <h2 class="possibilities-item-name">Fresh Coffee</h2>
-                <p class="possibilities-item-text">Web Site</p>
-            </a>
-        </li>
-      </ul>
-</section>
-</main>
-<!-- Footer -->
-<footer class="footer"> 
-    <a href="./index.html" class="main-logo link" >Web
-      <span class="main-logo-studio-footer link">Studio</span></a>
-      <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-  </footer>
+    </address>
+     </header>
+    <!-- Головний контент,секція1,наші переваги -->
+        <main> 
+          <section class="advantages">
+          <h1 hidden="" class="advantages-title">Our advantages</h1>
+          <ul class="advantages-list list">
+    <li><button type="button" class="btn">All</button></li>
+    <li><button type="button" class="btn">Web Site</button></li>
+    <li><button type="button" class="btn">App</button></li>
+    <li><button type="button" class="btn">Design</button></li>
+    <li><button type="button" class="btn">Marketing</button></li>
+          </ul> 
+    <!-- <!-List, inside of section --> 
+          <div class="container-possibilities">
+              <ul class="possibilities-list list">
+                <li class="possibilities-item link" >
+                     <a href="" class="possibilities-item-link link">
+                    <img src="./images/bankapp.jpg" alt="bank application" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Banking App Interface Concept</h2>
+                        <p class="possibilities-item-text">App</p>
+                    </div >
+                </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/contactless.jpg" alt="contactless payment" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Cashless Payment</h2>
+                            <p class="possibilities-item-text">Marketing</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/maditationapp.jpg" alt="meditation app" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Meditation App</h2>
+                            <p class="possibilities-item-text">App</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/taxiservice.jpg" alt="taxi service" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Taxi Service</h2>
+                            <p class="possibilities-item-text">Marketing</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/screenil.jpg" alt="screen illustratuin" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Screen Illustrations</h2>
+                            <p class="possibilities-item-text">Design</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/onlinecoures.jpg" alt="online education" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Online Courses</h2>
+                            <p class="possibilities-item-text">Marketing</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/igstories.jpg" alt="instagram stories" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Instagram Stories Concept</h2>
+                            <p class="possibilities-item-text">Design</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/organicfood.jpg" alt="organic food" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Organic Food</h2>
+                            <p class="possibilities-item-text">Web Site</p>
+                    </div >
+                    </a>
+                </li>
+                <li class="possibilities-item link">
+                    <a href="" class="possibilities-item-link link">
+                    <img src="./images/coffee.jpg" alt="coffee" width="360">
+                    <div class="possibilities-text-container">
+                        <h2 class="possibilities-item-name">Fresh Coffee</h2>
+                            <p class="possibilities-item-text">Web Site</p>
+                    </div >
+                    </a>
+                </li>
+              </ul>
+          </div >
+    </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer"> 
+        <a href="./index.html" class="main-logo link" >Web
+          <span class="main-logo-studio-footer link">Studio</span></a>
+          <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </footer>
+ </div >
 </body>
 </html>
