--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body>
   <!-- Шапка -->
- <div class="container">
       <header class="header">
-      <div class="container-header">
+        <div class="container .container-header">
          <nav class="navigation-list">
           <a href="./index.html" class="main-logo link" >Web
             <span class="main-logo-studio link">Studio</span></a>
@@ -31,19 +30,21 @@
         <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
     </ul>
     </address>
-      </div >
+  </div>
     </header>
   <!-- Головний контент,секція1 -->
       <main> 
         <section class="descrition">
-        <h1 class="descrition-title">Effective Solutions 
-          <span>for Your Business</h1></span>
-        <button type="button" class="description-btn">Order Service</button>
+       <div class="container .container-description">
+          <h1 class="descrition-title">Effective Solutions 
+            <span>for Your Business</h1></span>
+          <button type="button" class="description-btn">Order Service</button>
+       </di >
       </section>
       
   <!--Список стратегій,секція 2 -->
-      <div class="container-strategy">
         <section class="strategy-list">
+          <div class="container .container-strategy">
           <h2 hidden="" class="strategy-main-title">Strategy</h2>
           <ul class="strategy-list-content list">
             <li class="strategy-item">
@@ -63,57 +64,63 @@
                     <p class="strategy-text ">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
           </ul>
-      </di >
+      </div >
       </section>
       <!-- Чим ми займаємось -->
       <section class="perfomance">
-        <h2 class="perfomance-title">What Are We Doing</h2>
-        <ul class="perfomance-list list">
-          <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
-          <li class="perfomance-item"><img src="./images/apps.jpg" alt="applications" width="360"></li>
-          <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
-      </ul>
+        <div class="container .container-perfomance">
+          <h2 class="perfomance-title">What Are We Doing</h2>
+          <ul class="perfomance-list list">
+            <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
+            <li class="perfomance-item"><img src="./images/apps.jpg" alt="applications" width="360"></li>
+            <li class="perfomance-item"><img src="./images/compmob.jpg" alt="computer with mobile" width="360"></li>
+        </ul>
+        </div >
       </section>
       <!-- Наша команда  -->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-members list">
-          <li class="team-members-item">
-            <img src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264">
-            <div class="team-members-description">
-              <h3 class="team-members-item-title">Mark Guerrero</h3>
-              <p class="strategy-text team-members-item-text">Product Designer</p>
-            </div >
-          </li>
-          <li class="team-members-item">
-            <img src="./images/tom.jpg" alt="pic of Tom Ford" width="264">
-           <div class="team-members-description">
-              <h3 class="team-members-item-title">Tom Ford</h3>
-              <p class="strategy-text team-members-item-text ">Frontend Developer</p>
-           </div >
-          </li>
-          <li class="team-members-item" >
-            <img src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
-            <div class="team-members-description">
-              <h3 class="team-members-item-title">Camila Garcia</h3>
-              <p class="strategy-text team-members-item-text ">Marketing</p>
-            </div >
-          </li>
-          <li class="team-members-item">
-            <img src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
-            <div class="team-members-description">
-              <h3 class="team-members-item-title">Daniel Wilson</h3>
-              <p class="strategy-text team-members-item-text">UI Designer</p>
-            </div >
-          </li>
-        </ul>
+        <div class="container .container-team">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-members list">
+            <li class="team-members-item">
+              <img src="./images/marc.jpg" alt="pic of Marc Guerrero" width="264">
+              <div class="team-members-description">
+                <h3 class="team-members-item-title">Mark Guerrero</h3>
+                <p class="strategy-text team-members-item-text">Product Designer</p>
+              </div >
+            </li>
+            <li class="team-members-item">
+              <img src="./images/tom.jpg" alt="pic of Tom Ford" width="264">
+             <div class="team-members-description">
+                <h3 class="team-members-item-title">Tom Ford</h3>
+                <p class="strategy-text team-members-item-text ">Frontend Developer</p>
+             </div >
+            </li>
+            <li class="team-members-item" >
+              <img src="./images/camila.jpg" alt="pic of Camila Garcia" width="264">
+              <div class="team-members-description">
+                <h3 class="team-members-item-title">Camila Garcia</h3>
+                <p class="strategy-text team-members-item-text ">Marketing</p>
+              </div >
+            </li>
+            <li class="team-members-item">
+              <img src="./images/daniel.jpg" alt="pic of Daiel Wilson" width="264">
+              <div class="team-members-description">
+                <h3 class="team-members-item-title">Daniel Wilson</h3>
+                <p class="strategy-text team-members-item-text">UI Designer</p>
+              </div >
+            </li>
+          </ul>
+        </div >
       </section>
   </main>
   <!-- Footer -->
   <footer class="footer"> 
-    <a href="./index.html" class="main-logo link" >Web
-      <span class="main-logo-studio-footer link">Studio</span></a>
-      <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <div class="container .container-footer">
+      <a href="./index.html" class="main-logo link" >Web
+        <span class="main-logo-studio-footer link">Studio</span></a>
+        <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div >
   </footer>
  </div>
 </body>
