--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <!-- Шапка -->
- <div class="container">
       <header class="header">
+        <div class="container .container-header">
         <nav class="navigation-list">
          <a href="./index.html" class="main-logo link" >Web
            <span class="main-logo-studio link">Studio</span></a>
@@ -30,20 +30,25 @@
        <li class="tel .contacts"><a href="tel:+110001111111" class="mail-link link">+11 (000) 111-11-11 </a></li>
     </ul>
     </address>
+</div>
      </header>
     <!-- Головний контент,секція1,наші переваги -->
         <main> 
           <section class="advantages">
-          <h1 hidden="" class="advantages-title">Our advantages</h1>
-          <ul class="advantages-list list">
-    <li><button type="button" class="btn">All</button></li>
-    <li><button type="button" class="btn">Web Site</button></li>
-    <li><button type="button" class="btn">App</button></li>
-    <li><button type="button" class="btn">Design</button></li>
-    <li><button type="button" class="btn">Marketing</button></li>
-          </ul> 
+          <div class="container .container-advantages">
+              <h1 hidden="" class="advantages-title">Our advantages</h1>
+              <ul class="advantages-list list">
+        <li><button type="button" class="btn">All</button></li>
+        <li><button type="button" class="btn">Web Site</button></li>
+        <li><button type="button" class="btn">App</button></li>
+        <li><button type="button" class="btn">Design</button></li>
+        <li><button type="button" class="btn">Marketing</button></li>
+              </ul> 
+          </div >
+          </section>
     <!-- <!-List, inside of section --> 
-          <div class="container-possibilities">
+    <section class="possibilities">
+          <div class="container .container-possibilities">
               <ul class="possibilities-list list">
                 <li class="possibilities-item link" >
                      <a href="" class="possibilities-item-link link">
@@ -127,14 +132,16 @@
                     </a>
                 </li>
               </ul>
-          </div >
-    </section>
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer class="footer"> 
-        <a href="./index.html" class="main-logo link" >Web
-          <span class="main-logo-studio-footer link">Studio</span></a>
-          <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container .container-footer">
+            <a href="./index.html" class="main-logo link" >Web
+              <span class="main-logo-studio-footer link">Studio</span></a>
+              <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div >
       </footer>
  </div >
 </body>
