--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <body>
   <!-- Шапка -->
       <header class="header">
-        <div class="container .container-header">
+        <div class="container container-header">
          <nav class="navigation-list">
-          <a href="./index.html" class="main-logo link" >Web
-            <span class="main-logo-studio link">Studio</span></a>
+          <a href="./index.html" class="main-logo link">Web<span class="main-logo-studio link">Studio</span></a>
             <ul class="header-list list">
           <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
           <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
@@ -44,7 +43,7 @@
       
   <!--Список стратегій,секція 2 -->
         <section class="strategy-list">
-          <div class="container .container-strategy">
+          <div class="container container-strategy">
           <h2 hidden="" class="strategy-main-title">Strategy</h2>
           <ul class="strategy-list-content list">
             <li class="strategy-item">
@@ -68,7 +67,7 @@
       </section>
       <!-- Чим ми займаємось -->
       <section class="perfomance">
-        <div class="container .container-perfomance">
+        <div class="container container-perfomance">
           <h2 class="perfomance-title">What Are We Doing</h2>
           <ul class="perfomance-list list">
             <li class="perfomance-item"><img src="./images/computer.jpg" alt="computer" width="360"></li>
@@ -79,7 +78,7 @@
       </section>
       <!-- Наша команда  -->
       <section class="team">
-        <div class="container .container-team">
+        <div class="container container-team">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-members list">
             <li class="team-members-item">
@@ -116,9 +115,8 @@
   </main>
   <!-- Footer -->
   <footer class="footer"> 
-    <div class="container .container-footer">
-      <a href="./index.html" class="main-logo link" >Web
-        <span class="main-logo-studio-footer link">Studio</span></a>
+    <div class="container container-footer">
+      <a href="./index.html" class="main-logo link" >Web<span class="main-logo-studio-footer link">Studio</span></a>
         <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div >
   </footer>
