--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,9 @@
 <body>
   <!-- Шапка -->
       <header class="header">
-        <div class="container .container-header">
+        <div class="container container-header">
         <nav class="navigation-list">
-         <a href="./index.html" class="main-logo link" >Web
-           <span class="main-logo-studio link">Studio</span></a>
+         <a href="./index.html" class="main-logo link" >Web<span class="main-logo-studio link">Studio</span></a>
            <ul class="header-list list">
          <li class="navigation"><a class="header-link link" href="./index.html">Studio</a></li>
          <li class="navigation"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
@@ -35,7 +34,7 @@
     <!-- Головний контент,секція1,наші переваги -->
         <main> 
           <section class="advantages">
-          <div class="container .container-advantages">
+          <div class="container container-advantages">
               <h1 hidden="" class="advantages-title">Our advantages</h1>
               <ul class="advantages-list list">
         <li><button type="button" class="btn">All</button></li>
@@ -48,7 +47,7 @@
           </section>
     <!-- <!-List, inside of section --> 
     <section class="possibilities">
-          <div class="container .container-possibilities">
+          <div class="container container-possibilities">
               <ul class="possibilities-list list">
                 <li class="possibilities-item link" >
                      <a href="" class="possibilities-item-link link">
@@ -137,9 +136,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer"> 
-        <div class="container .container-footer">
-            <a href="./index.html" class="main-logo link" >Web
-              <span class="main-logo-studio-footer link">Studio</span></a>
+        <div class="container container-footer">
+            <a href="./index.html" class="main-logo link">Web<span class="main-logo-studio-footer link">Studio</span></a>
               <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div >
       </footer>
