--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <main> 
         <section class="descrition">
        <div class="container .container-description">
-          <h1 class="descrition-title">Effective Solutions 
-            <span>for Your Business</h1></span>
+          <h1 class="descrition-title">Effective Solutions
+            <span>for Your Business</span></h1>
           <button type="button" class="description-btn">Order Service</button>
-       </di >
+       </div>
       </section>
       
   <!--Список стратегій,секція 2 -->
@@ -120,7 +120,6 @@
         <p class="footer-text .text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div >
   </footer>
- </div>
 </body>
 </html>
 
